--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: '>=2.14.4 <3.0.0'
 
 dev_dependencies:
-  lints: ^1.0.0
+  lints: ^5.1.1
 
 dependencies: 
-  http: ^0.13.4
-  puppeteer: ^2.5.0
-  xml: ^5.3.1
-  dartx: any
+  http: ^1.3.0
+  puppeteer: ^3.17.0
+  xml: ^6.5.0
+  dartx: 1.2.0
